# ed-gateway

./: Dockerfile  Makefile  package.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
email_templates/: welcome_business.html  welcome_consumer.html  welcome_driver.html
src/: package.py
src/application/common/responses/: api_response.py
src/application/contracts/infrastructure/api/: __init__.py  abc_api.py  abc_auth_api_handler.py  abc_core_api_handler.py  abc_generic_api_client.py
src/application/contracts/infrastructure/persistence/: abc_unit_of_work.py
src/application/features/business/dtos/: __init__.py  business_account_dto.py  create_business_account_dto.py  (+3 more)
src/common/: generic_helpers.py
src/common/typing/: config.py
src/domain/entities/: consumer.py  delivery_job.py  order.py  route.py
src/ed_gateway/application/service/: api_service.py  auth_api_service.py  core_api_service.py
src/ed_gateway/common/: generic_helpers.py
src/ed_gateway/common/typing/: config.py
src/ed_gateway/domain/entities/: delivery_job.py  driver.py  driver_payment.py  order.py  route.py
src/ed_gateway/infrastructure/api/: __init__.py  api.py
src/ed_gateway/infrastructure/email/: email_templater.py
src/ed_gateway/infrastructure/image_upload/: image_uploader.py
src/ed_gateway/webapi/: api.py  dependency_setup.py
src/ed_gateway/webapi/common/: helpers.py  jwt_bearer.py
src/ed_gateway/webapi/controllers/: admin_controller.py  api_controller.py  business_controller.py  consumer_controller.py  delivery_job_controller.py  driver_controller.py  order_controller.py
src/infrastructure/api/: __init__.py  api.py  api_client.py  auth_api_handler.py  core_api_handler.py
src/infrastructure/persistence/: unit_of_work.py
src/webapi/: api.py  dependency_setup.py
src/webapi/common/: helpers.py
src/webapi/controllers/: business_controller.py  driver_controller.py
(+226 files in other folders)
