[tool.poetry]
name = "ed-gateway"
version = "0.1.1"
description = ""
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
websockets = "^14.1"
rmediator = "^0.2.3"
aiohttp = "^3.11.18"
jsons = "^1.6.3"
requests = "^2.32.3"
pre-commit = "^4.2.0"
ed-domain = "^0.3.4"
ed-auth = "^0.1.11"
ed-core = "0.2.15"
cloudinary = "^1.44.0"
python-multipart = "^0.0.20"
ed-infrastructure = "^0.1.12"


[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
ruff = "^0.8.2"
poetry-plugin-export = ">=1.8"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
